# rebecca_bot

./: Cargo.toml  Dockerfile
src/: main.rs
src/dictionary/: pos.txt  text_to_sounds.txt
